<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
				 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dasniko.keycloak</groupId>
	<artifactId>keycloak-extensions-demo</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>utils</module>
		<module>custom-sms-spi</module>
		<module>event-listener</module>
		<module>tokenmapper</module>
		<module>flintstones-userprovider</module>
		<module>rest-endpoint</module>
		<module>requiredaction</module>
		<module>magiclink</module>
		<module>captcha</module>
		<module>email</module>
		<module>conditional-authenticators</module>
		<module>mfa-authenticator</module>
		<module>passkey</module>
  	<module>initializer</module>
		<module>actiontoken</module>
		<module>admin-ui</module>
		<module>scheduled-task</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<aws.version>2.17.209</aws.version>
		<bytebuddy.version>1.14.11</bytebuddy.version>
		<keycloak.version>25.0.1</keycloak.version>
		<maven.compiler.version>3.13.0</maven.compiler.version>
		<maven.compiler.release>21</maven.compiler.release>
		<maven-shade.version>3.6.0</maven-shade.version>
		<maven-surefire.version>3.2.5</maven-surefire.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.dasniko</groupId>
				<artifactId>keycloak-spi-bom</artifactId>
				<version>main-SNAPSHOT</version>
<!--				<version>${keycloak.version}</version>-->
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.github.dasniko</groupId>
				<artifactId>testcontainers-keycloak</artifactId>
				<version>main-SNAPSHOT</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>sns</artifactId>
				<version>${aws.version}</version>
				<exclusions>
					<exclusion>
						<groupId>software.amazon.awssdk</groupId>
						<artifactId>netty-nio-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>ses</artifactId>
				<version>${aws.version}</version>
				<exclusions>
					<exclusion>
						<groupId>software.amazon.awssdk</groupId>
						<artifactId>netty-nio-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${bytebuddy.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy-agent</artifactId>
				<version>${bytebuddy.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade.version}</version>
					<configuration>
						<artifactSet>
							<excludes>
								<exclude>org.keycloak*</exclude>
								<exclude>org.apache.httpcomponents:httpcore</exclude>
								<exclude>com.google*</exclude>
								<exclude>org.checkerframework*</exclude>
							</excludes>
						</artifactSet>
					</configuration>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>jboss-snapshots</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

</project>
